<resources>
    <string name="app_name">Al Quran</string>
    <string name="surah_1">আল ফাতিহা\nAl-Fatihah</string>
    <string name="surah_2">আল বাকবারাহ\nAl-Baqara</string>
    <string name="surah_3">আল ইমরান\nAl-Imran</string>
    <string name="surah_4">আন নিসা\nAn-Nisaa</string>
    <string name="surah_5">আল মায়েদাহ\nAl-Maidah</string>
    <string name="surah_6">আল আন-আম\nAl An-Am</string>
    <string name="surah_7">আল আরাফ\nAl ARaf</string>
    <string name="surah_8">আল-আনফাল\nAl Anfal</string>
    <string name="surah_9">আত তাওবাহ\nAt Taobah</string>
    <string name="surah_10">ইউনুস\nIunus</string>
    <string name="surah_11">হুদ\nhud</string>
    <string name="surah_12">ইউসূফ\nYusuf</string>
    <string name="surah_13">রাদ\nAr-Rad</string>
    <string name="surah_14">ইব্রাহীম\nIbrahim</string>
    <string name="surah_15">হিজর\nAl-Hijr</string>
    <string name="surah_16">নাহল\nAn-Nahl</string>
    <string name="surah_17">বনী ইসরাঈল\nIsrael</string>
    <string name="surah_18">কাহফ\nAl-Kahf</string>
    <string name="surah_19">মারইয়াম\nMaryam</string>
    <string name="surah_20">ত্বোয়া-হা\nTa-ha</string>
    <string name="surah_21">আম্বিয়া\nAl-Anbiyaa</string>
    <string name="surah_22">হাজ্জ্ব\nAl-Hajj</string>
    <string name="surah_23">আল মুমিনূন\nAl-Muminun</string>
    <string name="surah_24">আন-নূর\nAn-Nur</string>
    <string name="surah_25">আল-ফুরকান\nAl-Furqan</string>
    <string name="surah_26">আশ-শোআরা\nAsh-Shuaraa</string>
    <string name="surah_27">নমল\nAn-Naml</string>
    <string name="surah_28">আল কাসাস\nAl-Qasas</string>
    <string name="surah_29">আল আনকাবুত\nAl-Ankabut</string>
    <string name="surah_30">আর-রূম\nAr-Rum</string>
    <string name="surah_31">লোকমান\nLuqman</string>
    <string name="surah_32">সেজদাহ\nAs-Sajda</string>
    <string name="surah_33">আল আহযাব\nAl-Ahzab</string>
    <string name="surah_34">সাবা\nSaba</string>
    <string name="surah_35">ফাতির\nFatir</string>
    <string name="surah_36">ইয়াসীন\nYa-Sin</string>
    <string name="surah_37">আস-সাফফাত\nAs-Saffat</string>
    <string name="surah_38">ছোয়াদ\nSad</string>
    <string name="surah_39">আল-যুমার\nAz-Zumar</string>
    <string name="surah_40">আল-মুমিন\nAl-Mumin</string>
    <string name="surah_41">হা-মীম সেজদাহ\nHa-Mim</string>
    <string name="surah_42">আশ-শুরা\nAsh-Shura</string>
    <string name="surah_43">যুখরুফ\nAz-Zukhruf</string>
    <string name="surah_44">আদ দোখান\nAd-Dukhan</string>
    <string name="surah_45">আল জাসিয়া\nAl-Jathiya</string>
    <string name="surah_46">আল আহক্বাফ\nAl-Ahqaf</string>
    <string name="surah_47">মুহাম্মদ\nMuhammad</string>
    <string name="surah_48">আল ফাতহ\nAl-Fat-h</string>
    <string name="surah_49">আল হুজরাত\nl-Hujurat</string>
    <string name="surah_50">ক্বাফ\nQaf</string>
    <string name="surah_51">আয-যারিয়াত\nAz-Zariyat</string>
    <string name="surah_52">আত্ব তূর\nAt-Tur</string>
    <string name="surah_53">আন-নাজম\nAn-Najm</string>
    <string name="surah_54">আল ক্বামার\nAl-Qamar</string>
    <string name="surah_55">আর রহমান\nAr-Rahman</string>
    <string name="surah_56">আল ওয়াক্বিয়া\nAl-Waqia</string>
    <string name="surah_57">আল হাদীদ\nAl-Hadid</string>
    <string name="history_of_quran_part1">কুরআন মজীদ আল্লাহ্‌ তাবারক ওয়া তাআলার পবিত্র ও অনন্য কিতাব এবং কালাম বা বাণী। সারা বিশ্বের মানবমন্ডলীর উদ্দেশ্যে এ পবিত্র কালাম অবতীর্ণ হয়েছে (সূরা বাকারা: ১৮৬)। হযরত জিব্‌রাঈল (আ.)-এর মাধ্যমে এ কুরআন হযরত খাতামুন্নাবীঈন রহমাতুল্লিল আলামীন বিশ্বনবী হযরত মুহাম্মদ মুস্তাফা আহমদ মুজতাবা সাল্লাল্লাহু আলায়হে ওয়া সাল্লামের ওপর অবতীর্ণ করেছেন মহান আল্লাহ্‌ তাআলা। ৬১০ খৃষ্টাব্দের ২৪শে রমযান হযরত জিবরাঈল আমীন সর্ব প্রথম হেরা গুহায় প্রথম কুরআনের বাণী নিয়ে আসেন নবী করীম সাল্লাল্লাহু আলায়হে ওয়া সাল্লামের কাছে।</string>
    <string name="history_of_quran_part2">কুরআন মজীদ সম্পর্কে প্রাথমিক জ্ঞাতব্য বিষয় এ কুরআন শেষ ও পরিপূর্ণ জীবন বিধান গোটা মানবজাতির জন্যে।</string>
    <string name="history_of_quran_part3">\‘আল্‌ কুরআন\’ শব্দটি \‘কারায়া\’ মূল শব্দ থেকে উৎপন্ন। \‘কারায়া\’ অর্থ সে পাঠ করেছিল, সে বাণী পৌঁছিয়েছিল, সে সংগ্রহ করেছিল। কুরআন অর্থ: (১) পাঠ্যোপযোগী পুস্তক যা বার বার পাঠ করা যায়। (২) একখানা পুস্তক যা বিশ্বের সব জায়গায় নিয়ে যাওয়া এবং পৌছানো প্রয়োজন। এমন যা সব সত্যকে ধারণ করে ইত্যাদি। কুরআনের ২য় সূরা আল্‌ বাকারার প্রথমেই \‘যালিকাল কিতাব\’ বা এ সেই প্রতিশ্রুত কিতাব বলে ভবিষ্যদ্বাণী করা হয়েছিল একদিন এ এক সুসমন্বিত আকারে গ্রন্থ হিসেবে আকৃতি লাভ করবে অথচ তখনও পূর্ণ কুরআন অবতীর্ণই হয়নি।</string>
    <string name="history_of_quran_part4">কুরআনে এর আরও ৩৩টি নাম বর্ণিত হয়েছে। এর কয়েকটি এরূপ: আল্‌ কিতাব, আল্‌ কুরআন, আয্‌ যিক্‌র, আল্‌ হুদা, আল্‌ আয়ান, আন্‌ নূর, আল্‌ হাকীম, আল্‌ বশীর, আল্‌ নাযীর, আল্‌ মাজীদ, আল্‌ কারীম।</string>
    <string name="history_of_quran_part5">কুরআন এমন একখানা পুস্তক যা ১১৪টি পরিচ্ছেদ বা Chapter -এ বিভক্ত। প্রতিটি পরিচ্ছদকে বলে সূরা। সারা কুরআন আবার ৩০ ভাগে বিভক্ত করা হয়েছে। এর এক একটি অংশকে পারা বা Part বলে। আবার পুরা কুরআন ৭টি মঞ্জিলে বিভক্ত। এসবই করা হয়েছে কুরআন সহজে মুখস্থ করার সুবিধার জন্যে। কুরআন যিনি মুখস্থ করে রাখেন তিনি \‘হাফিয\’ নামে পরিচিত। বিশ্বের কোন গ্রন্থ এভাবে কেউ মুখস্থ রাখতে পারে না। এটা কুরআনেরই একটি বৈশিষ্ট্য। আর এ ব্যাপারে কুরআনে প্রতিশ্রুতি দেয়া হয়েছে। কুরআনের সূরাগুলোর কোন কোনটি মক্কায় অবতীর্ণ হয়েছে এবং কোন কোনটি হিজরতের পরে অবতীর্ণ হয়েছে মদীনায়। এদের সংখ্যা যথাক্রমে ৮৪ এবং ৩০। তাই এ সূরা গুলোকে মক্কী ও মাদানী নামে অভিহিত করা হয়েছে। সূরার কোন কোনটি মক্কা মদীনা উভয় স্থানেই অর্থাৎ ২ বার অবতীর্ণ হয়েছে। কুরআন মজীদে আয়াতের সবমোট সংখ্যা ৬২৩৬। আর সূরার প্রারম্ভে \‘বিসমিল্লাহ্\‌’-কে আয়াত ধরে গণনা করলে সংখ্যা দাঁড়ায় (৬২৩৬ + ১১৩) ৬৩৪৯। কোন কোন বর্ণনায় ৬৬৬৬ বলে উল্লেখ করা হয়েছে। আয়াতের গঠন নিয়ে মতভেদের কারণে এ রকম হতে পারে। কুরআনের শব্দের সংখ্যা ৭৭, ৯৩৪ (ইমাম সাইউতী প্রণীত কিতাবুল ইতকাল ফি উল্কমিল কুরআন, প্রথম খন্ড, পৃষ্ঠা: ৬৬-৭২)। কুরআন মজীদ দীর্ঘ ২৩ বছর(মক্কায় ১২ বছর ৫ মাস ২১ দিন এবং মদীনায় ১০ বছর ৬ মাস ৯ দিন) বছর বা ৭৯৭০ দিনে অবতীর্ণ হয়েছে। এতে বুঝা যায় কুরআন খুব ধীরে ধীরে অবতীর্ণ হয়েছে, অর্থাৎ দৈনিক গড়ে প্রায় ৯টি শব্দ অবতীর্ণ হয়েছে। প্রাথমিক যুগে কুরআনে এখানকার মত \‘ই\’রাব\’ বা \‘যের\’, \‘যবর\’ ইত্যদি ছিলো না। উমাইয়া রাজত্বকালে হাজ্জাজ বিন ইউসুফের সময় এর প্রবর্তন করা হয়। আরও পরে মুখস্থ করার সুবিধার্থে কুরআন করীমকে ৫৪০ রুকূ এবং ৭টি মঞ্জিলে বিভক্ত করা হয়। এটা আগেও উল্লেখ করা হয়েছে। কুরআন সম্বন্ধে আরও কিছু তথ্য এরূপ:</string>
    <string name="history_of_quran_part6">(ক) কুরআনের সবচেয়ে বড় সূরা হলো সূরা বাকারা। এতে ৪০ রুকূ এবং ২৮৭ আয়াত। আর সবচেয়ে ছোট সূরা হলো কাওছার। এতে ১ রুকূ এবং ৪ আয়াত।</string>
    <string name="history_of_quran_part7">(খ) কুরআনের সবচেয়ে বড় আয়াত হলো সূরা বাকারার ২৮৩ আয়াত এবং সবচেয়ে ছোট আয়াত রয়েছে একাধিক</string>
    <string name="history_of_quran_part8">(গ) সূরা মুয্‌যাম্মিলের ২১ আয়াতটি ১ রুকূ সম্বলিত।</string>
    <string name="history_of_quran_part9">(ঘ) কুরআনের সবচেয়ে বড় রুকূ সূরা সাফ্‌ফাতের ২য় রুকূটি। এটি ৫৩ আয়াত সম্বলিত।</string>
    <string name="history_of_quran_part10">আগেই বলেছি কুরআনে ৩০টি পারা। যাতে ৩০ দিনে কুরআন খতম করা যায় তাই এ ব্যবস্থা। প্রত্যেক পারাকে আবার এক চতুর্থাংশ, অর্ধাংশ, এক তৃতীয়াংশ এভাবেও ভাগ করা হয়েছে। কুরআনে দু রকমের আয়াত - \‘আয়াতে মুহকামাত\’ (আদেশসম্বলিত সুস্পষ্ট) এবং \‘আয়াতে মুতাশাবিহ\’ (রূপ দ্বার্থবোধক)। কুরআনে ২৯টি সূরার প্রথমে সূরা হুরূফে মুকাত্তায়ত আছে। আরবীকে বলে \‘উম্মুল আল সিনা\’ বা ভাষার জননী। এ ভাষায় কুরআন করীম অবতীর্ণ হয়েছে (সূরা ইউসূফ: ৩)। এ কুরআন সব গ্রন্থের জননী (সূরা যুখরুফ: ৫)। সব স্থায়ী আদেশ এতে সন্নিবেশিত করা হয়েছে (সূরা বাইয়েনাহ: ৪)। এ কুরআন শেষ ও পরিপূর্ণ শরীয়ত গ্রন্থ মানুষের জন্য পরিপূর্ণ জীবন বিধান (সূরা মায়েদা: ৪)। আল্‌ কুরআনে \‘আল্লাহ্‌\’ শব্দটি ২৬৯৮ বার ব্যবহৃত হয়েছে। \‘মুহাম্মদ\’ শব্দটি ব্যবহৃত হযেছে ৪ বার।</string>
    <string name="history_of_quran_part11">কুরআন করীমের অবতীর্ণ ও গ্রন্থবদ্ধ হওয়ার ইতিবৃত্ত</string>
    <string name="history_of_quran_part12">আগেই বলেছি কুরআন করীম রূহুল আমীন হযরত জিবরাঈলের মারফত দীর্ঘ ২৩ বছর ধরে নবী করীম সল্লাল্লাহু আলায়হে ওয়া সাল্লামের কাছে অল্প অল্প করে ওহীর মাধ্যমে অবতীর্ণ হয়েছে। আঁ হুযূর (সা.)-এর রীতি ছিল, কুরআনের যতটুকু অংশ যখনই অবতীর্ণ হতো তিনি তখনই আল্লাহ্‌ তাআলার প্রত্যক্ষ তদারকীতে ও নির্দেশে তা লিপিবদ্ধ করিয়ে নিতেন চামড়া হাড় গাছের পাতা বাকল প্রভৃতিতে। কেননা, তখনও কাগজ আবিষ্কৃত হয়নি। আর আল্লাহ্‌ তাআলার ফযল ও অনুগ্রহে নবী আকরম (সা.)-এর হৃদয়পটেও এ অংশ অঙ্কিত হয়ে যেতো। এ প্রসঙ্গে আল্লাহ্‌ তাআলার প্রতিশ্রুতি ছিল \‘সা নুক্বরিউকা ফালা তানসা\’ (সূরা আলা) অর্থাৎ আমি তোমাকে কুরআন এমনভাবে পড়িয়ে দেবো যে তুমি তা ভুলবে না। মহান আল্লাহ্‌ তাআলা আরও বলেছেন, \‘ইন্না আলায়না জামাআহূ ওয়া কুরআনাহূ\’ (সূরা কিয়ামাহ্‌) অর্থাৎ ন��শ্চয় এ কুরআন (তোমার হৃদয়পটে) সমাবেশ করে দেয়া আমাদের দায়িত্ব।</string>
    <string name="history_of_quran_part13">কুরআন কিভাবে নবী করীম সাল্লাল্লাহু আলায়হে ওয়া সাল্লামের কাছে অবতীর্ণ হতো এ প্রসঙ্গে দু একটি হাদীস উদ্ধৃত করার অবকাশ রয়েছে বলে মনে করি:</string>
    <string name="history_of_quran_part14">• হযরত আয়েশা (রা.) থেকে বর্ণিত। হারিছ ইবনে হিকাম (রা.) রসূলুল্লাহ্‌ (সা.) কে জিজ্ঞাস করলেন, হে আল্লাহ্‌র রসূল আপনার কাছে কিভাবে ওহী আসে? তিনি (সা.) বললেন, \‘কোন সময় এমন হয়, একটি (চিত্তকর্ষক) টুং টাং শব্দ আমি শুনতে পাই। সেই শব্দ বন্ধ হতে না হতেই যা বলা হয় সব কিছুই আমি মুখস্থ করে নিই। এ ধরনের ওহী আমার জন্যে বড়ই শান্তিদায়ক হয়। আবার কোন কোন সময় স্বয়ং ফিরিশ্‌তা মানুষের আকার ধারণ করে আমার কাছে আসে এবং আল্লাহ্‌র বাণী আমাকে বলে দেয়। আমি তা মুখস্থ ও হৃদয়ঙ্গম করে নেই। প্রথম ধরনের ওহী সম্পর্কে হযরত আয়েশা (রা.) বলেন, \‘আমি অতি প্রচন্ড শীতের সময়ও হযরতকে ওহী অবতীর্ণ হওয়ার কারণে ঘর্মাক্ত হয়ে যেতে দেখছি\’ (বুখারী)। প্রসঙ্গত বলা হচ্ছে, ওহী যখন অবতীর্ণ হওয়ার সময় হতো তখন পরিবেশটা এমন এক ধরনের হয়ে যেতো, আঁ হুযূর (সা.)-এর আশে পাশে যারা থাকতেন তারা এটা বুঝতে পারতেন। ওহী অবতরণকালীন সময়ে নবী করীম (সা.)-এর আমল কি রকম হতো নিম্নোক্ত হাদীস থেকে তা-ও আমরা জানতে পারি।</string>
    <string name="history_of_quran_part15">• হযরত ইবনে আব্বাস (রা.) বর্ণনা করেন। মানব জগতে রসূলুল্লাহ্‌ সাল্লাল্লাহু আলায়হে ওয়া সাল্লামের চেয়ে বড় দাতা আর কেউ হয়নি এবং হবেও না। তিনিই ছিলেন সর্বশ্রেষ্ঠ দানশীল। বিশেষ করে যখন রমযান মাস আসতো এবং যখন জিব্‌রাঈল আমীন এসে তাঁর সাথে কুরআন শরীফের পুনরাবৃত্তি করতেন তখন তাঁর দানশীলতার কোন সীমা পরিসীমা থকাতো না। প্রত্যেক দিন হযরত জিব্‌রাঈল এসে রসূলুল্লাহ্‌ (সা.)-কে কুরআনের পুনরাবৃত্তি করাতেন। অবশেষে তখন তাঁর কল্যাণ, অনুগ্রহ ও আধ্যাত্মিক দৃষ্টি জীবনী শক্তিবাহী বসন্তের মলয় সমীরণের চেয়েও অধিকতর ব্যাপক হতো (বুখারী)।</string>
    <string name="history_of_quran_part16">আগেই বলেছি, ওহী অবতীর্ণ হওয়া মাত্রই নবী করীম (সা.)-এর হৃদয়পটে তা খোদিত হয়ে যেতো। এমনকি সাহাবা কেরামের মাঝেও এর প্রভাব সৃষ্টি হতো। তাঁরাও সহজেই শুনে শুনে মুখস্থ করে ফেলতেন। তবে এর মাঝে যাতে কোন বিকৃতি না ঘটে সেজন্যে এ ওহী লিখার জন্যে কোন কোন সাহাবী নিযুক্ত ছিলেন। তাঁদের বলা হতো \‘কাতেবে ওহী\’ বা ওহী লিখক। এঁদের মাঝে ছিলেন: (১) হযরত আবূ বকর (রা.) (২) হযরত ওমর (রা.), (৩) হযরত উসমান (রা.) (৪) হযরত আলী (রা.) (৫) যাবির বিন আলা আওয়াম (৬) শারজীল বিন হাসনাহ্‌ (৭) আব্দুল্লাহ্‌ বিন রাওয়াহাহ্‌ (৮) ওবায় বিন কা\’ব (৯) যায়েদ বিন ছাবিত। রসূলুল্লাহ্‌ (সা.)-এর দরবারে এ রকম ৪২ জন কাতেবে ওহী ছিলেন। প্রত্যেক বছর কুরআন মজীদের কতটুকু অংশ অবতীর্ণ হতো রমযান মাসে হযরত জিব্‌রাঈল তা নবী করীম (স.)-এর কাছে পুনরাবৃত্তি করতেন। যে বছর নবী করীম সাল্লাল্লাহু আলায়হে ওয়া সাল্লাম ইন্তেকাল করেন সেই বছর হযরত জিব্‌রাঈল রমযান মাসে অবতীর্ণ গোটা অংশ ২ বার পুনরাবৃত্তি করেন। এতে নবী করীম (সা.) বুঝতে পারলেন কুরআন করীম অবতীর্ণ হওয়ার কাজ পূর্ণ হয়েছে এবং তাঁর (সা.) অন্তিম যাত্রার পালাও ঘনিয়ে এসেছে।</string>
    <string name="history_of_quran_part17">নবী করীম (সা.)-এর ইন্তেকালের পর হযরত উমর (রা.)-এর পরামর্শক্রমে হযরত আবূ বকর (রা.) হযরত যায়েদ সাবিত আনসারী (রা.)-কে নির্দেশ দিলেন যেন তিনি লিখিত কুরআন শরীফের একখানা কপি পুস্তকাকারে বাঁধাই করে রাখেন। অতএব তিনি (রা.) অনেক পরিশ্রম করে প্রত্যেক আয়াতের ব্যাপারে লিখিত ও মুখস্থ প্রত্যেক প্রকারের দৃঢ় সাক্ষ্যের সত্যায়নের মাধ্যমে এ কুরআনকে একখানা গ্রন্থের রূপ দান করেন, (বুখারী কিতাবু ফাযায়েলিল কুরআন)। এ কুরআন খানা হযরত উম্মুল মু\’মিনীন হাফসা বিনতে উমর (রা.)-এর কাছে সংরক্ষিত ছিল। হযরত উসমান (রা.)-এর সময়ে যখন পঠনপদ্ধতি নিয়ে বিভিন্ন মতভেদ দেখা দিলো তখন হযরত উসমান (রা.) উপরোক্ত সংরক্ষিত কুরআন খানার বহু কপি নকল করিয়ে এক ফরমান জারির মাধ্যমে তা দেশে দেশে প্রেরণ করেন। নকল করার কাজে যারা নিয়োজিত ছিলেন তাঁরা হলেন-যায়েদ বিন ছাবিত, আব্দুল্লাহ ইবনে যুবায়ের, সায়্যেদ ইবনুল আস ও আব্দুর রহমান ইবনুল হারিস রেযওয়ানুল্লায়হে আলায়হিম।</string>
</resources>